--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -84,9 +84,21 @@
             <div class="col-md-12">
                 <!-- DEBUT Onglets -->
                 <ul class="nav nav-pills nav-justified" role="tablist">
-                    <li class="active" role="presentation"><a href="#etudes" aria-controls="etudes" role="tab" data-toggle="pill"><strong>Etudes</strong></a></li>
-                    <li role="presentation"><a href="#stages" aria-controls="stage" role="tab" data-toggle="pill"><strong>Stage</strong></a></li>
-                    <li role="presentation"><a href="#associatif" aria-controls="associatif" role="tab" data-toggle="pill"><strong>Associatif</strong></a></li>
+                    <li class="active" role="presentation">
+                        <a href="#etudes" aria-controls="etudes" role="tab" data-toggle="pill">
+                            <p><strong>Etudes</strong></p>
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#stages" aria-controls="stage" role="tab" data-toggle="pill">
+                            <p><strong>Stage</strong></p>
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#associatif" aria-controls="associatif" role="tab" data-toggle="pill">
+                            <p><strong>Associatif</strong></p>
+                        </a>
+                    </li>
                 </ul>
                 <!-- FIN Onglets -->
             </div>
@@ -108,14 +120,17 @@
                                     <div class="date center-block flex">
                                         <h4>2009 - 2012</h4> </div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 flex"> <strong>Etudes secondaires au Lycée Hoche à Versailles</strong> </div>
+                                <div class="col-xs-9 col-sm-7 flex">
+                                    <p><strong>Etudes secondaires au Lycée Hoche à Versailles</strong></p>
+                                </div>
                             </div>
                             <div class="row flex flex-row">
                                 <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2012</h4></div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 flex"> <strong>Obtention du Baccalauréat Général Scientifique</strong>
+                                <div class="col-xs-9 col-sm-7 flex">
+                                    <p><strong>Obtention du Baccalauréat Général Scientifique</strong></p>
                                     <ul>
                                         <li>Option Sciences de la Vie et de la Terre</li>
                                         <li>Spécialité Physique - Chimie</li>
@@ -137,7 +152,8 @@
                                     <div class="date center-block flex">
                                         <h4>2012 - 2014</h4></div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 flex"> <strong>Entrée en PACES à Paris Descartes</strong>
+                                <div class="col-xs-9 col-sm-7 flex">
+                                    <p><strong>Entrée en PACES à Paris Descartes</strong></p>
                                     <ul>
                                         <li>Redoublement en 2013</li>
                                         <li>Reçu-collé au concours en 2014</li>
@@ -149,7 +165,8 @@
                                     <div class="date center-block flex">
                                         <h4>2014 - 2016</h4></div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 flex"><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong>
+                                <div class="col-xs-9 col-sm-7 flex">
+                                    <p><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong></p>
                                     <ul>
                                         <li>Obtention de la 2ème année de licence (L2) en 1ère session</li>
                                         <li>Obtention de la 3ème année de licence (L3) en 1ère session</li>
@@ -161,7 +178,9 @@
                                     <div class="date center-block flex">
                                         <h4><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</h4></div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 flex"><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong> </div>
+                                <div class="col-xs-9 col-sm-7 flex">
+                                    <p><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong></p>
+                                </div>
                             </div>
                         </div>
                         <div class="hidden-xs col-sm-3 col-md-2"> <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block logo-descartes"> </div>
@@ -177,7 +196,9 @@
                                     <div class="date center-block flex">
                                         <h4>2016 - 2017</h4></div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 flex"><strong>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</strong></div>
+                                <div class="col-xs-9 col-sm-7 flex">
+                                    <p><strong>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</strong></p>
+                                </div>
                             </div>
                         </div>
                         <div class="hidden-xs col-sm-3 col-md-2 flex"> <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block logo-ingesup"> </div>
@@ -197,7 +218,8 @@
                                     <div class="date center-block flex">
                                         <h4>Fevrier 2009</h4></div>
                                 </div>
-                                <div class="col-xs-8 col-sm-7 flex"> <strong>Stage au Grand Optical</strong>
+                                <div class="col-xs-8 col-sm-7 flex">
+                                    <p><strong>Stage au Grand Optical</strong></p>
                                     <ul>
                                         <li>Fabrication de verres de lunettes</li>
                                         <li>Montage des verres</li>
@@ -224,7 +246,8 @@
                                     <div class="date center-block flex">
                                         <h4>2014 - 2015</h4></div>
                                 </div>
-                                <div class="col-xs-8 col-sm-7 flex"> <strong>Membre Actif de l'Amicale Paris Sciences</strong>
+                                <div class="col-xs-8 col-sm-7 flex">
+                                    <p><strong>Membre Actif de l'Amicale Paris Sciences</strong></p>
                                     <ul>
                                         <li>Réalisation de projets tout au long de l'année :
                                             <ul>
@@ -246,7 +269,8 @@
                                     <div class="date center-block flex">
                                         <h4>2015 - 2016</h4></div>
                                 </div>
-                                <div class="col-xs-8 col-sm-7 flex"><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong>
+                                <div class="col-xs-8 col-sm-7 flex">
+                                    <p><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></p>
                                     <ul>
                                         <li>Gestion d'un serveur linux hébergé par 1&amp;1</li>
                                         <li>Création d'un site basé sur Joomla</li>
@@ -260,7 +284,8 @@
                                     <div class="date center-block flex">
                                         <h4>2016 - 2017</h4></div>
                                 </div>
-                                <div class="col-xs-8 col-sm-7 flex"><strong>Membre Ancien de l'Amicale Paris Sciences</strong>
+                                <div class="col-xs-8 col-sm-7 flex">
+                                    <p><strong>Membre Ancien de l'Amicale Paris Sciences</strong></p>
                                     <ul>
                                         <li>Conseils pour le nouveau Bureau</li>
                                         <li>Aide ponctuelle pour l'organisation de certains événements</li>
