--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -126,7 +126,7 @@
                             <div class="row flex flex-row">
                                 <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
-                                        <h4>Modelisation 3D</h4></div>
+                                        <h4>Modélisation 3D</h4></div>
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex">
                                     <p><strong>3D Studio Max</strong></p>
@@ -158,7 +158,7 @@
                             <div class="row flex flex-row">
                                 <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
-                                        <h4>Reparations</h4></div>
+                                        <h4>Réparations</h4></div>
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex">
                                     <p><strong>Nettoyage, installation et réparation d'ordinateurs</strong></p>
@@ -346,7 +346,7 @@
                             <div class="row flex flex-row">
                                 <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
-                                        <h4>OpenClassrooms</h4></div>
+                                        <h4>Open<br>Classrooms</h4></div>
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex">
                                     <p><strong>Cours demarrés sur OpenClassrooms :</strong></p>
