--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -216,7 +216,7 @@
                             <div class="row flex flex-row">
                                 <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
-                                        <h4>Fevrier 2009</h4></div>
+                                        <h4>Février 2009</h4></div>
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex">
                                     <p><strong>Stage au Grand Optical</strong></p>
