--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
             <div class="col-md-12" id="competences">
                 <h2 class="text-center">Mes compétences</h2> </div>
         </div>
+        <div class="col-md-12">
+            <h3 class="text-center">Langages Web</h3> </div>
         <div class="row text-center">
             <div class="col-xs-6 col-md-2">
                 <div id="html5" class="pgrbar center-block"></div>
@@ -148,7 +150,7 @@
             </div>
             <div class="col-xs-6 col-md-2">
                 <div id="js" class="pgrbar center-block"></div>
-                <p>JavaScrip</p>
+                <p>JavaScript</p>
             </div>
             <div class="col-xs-6 col-md-2">
                 <div id="jquery" class="pgrbar center-block"></div>
@@ -161,6 +163,34 @@
             <div class="col-xs-6 col-md-2">
                 <div id="php" class="pgrbar center-block"></div>
                 <p>PHP</p>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <h3 class="text-center">Programmation</h3> </div>
+        <div class="row text-center">
+            <div class="col-xs-6 col-md-2">
+                <div id="bash" class="pgrbar center-block"></div>
+                <p>Bash</p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <div id="c" class="pgrbar center-block"></div>
+                <p>C</p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <div id="cpp" class="pgrbar center-block"></div>
+                <p>C++</p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <div id="java" class="pgrbar center-block"></div>
+                <p>Java</p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <div id="python" class="pgrbar center-block"></div>
+                <p>Python</p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <div id="git" class="pgrbar center-block"></div>
+                <p>Git</p>
             </div>
         </div>
     </div>
