--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mon Portfolio - Présentation</title>
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
-    <link rel="stylesheet" href="css/style-general.css">
-    <link rel="stylesheet" href="css/style-accueil.css">
-    <script type="text/javascript" src="js/mail.js"></script>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- FIN BOOTSTRAP -->
+    <link rel="stylesheet" href="css/style-general.css">
+    <link rel="stylesheet" href="css/style-accueil.css">
+    <script type="text/javascript" src="js/mail.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -132,65 +132,110 @@
             </div>
         </div>
     </div>
-    <div class="container text-justify wrapper">
+    <hr>
+    <div class="container text-justify competences wrapper">
         <div class="row">
             <div class="col-md-12" id="competences">
                 <h2 class="text-center">Mes compétences</h2> </div>
         </div>
         <div class="col-md-12">
+            <hr>
+            <h3 class="text-center">Langues</h3> </div>
+        <div class="row text-center">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-4">
+                <div id="esp" class="pgrbar center-block"></div>
+                <p>Espagnol</p>
+            </div>
+            <div class="col-xs-4 col-sm-2">
+                <div id="eng" class="pgrbar center-block"></div>
+                <p>Anglais</p>
+            </div>
+        </div>
+        <hr>
+        <div class="col-md-12">
             <h3 class="text-center">Langages Web</h3> </div>
         <div class="row text-center">
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
                 <div id="html5" class="pgrbar center-block"></div>
                 <p>HTML5</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-sm-2 col-md-2">
                 <div id="css3" class="pgrbar center-block"></div>
                 <p>CSS3</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
                 <div id="js" class="pgrbar center-block"></div>
                 <p>JavaScript</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-sm-2 col-md-2">
                 <div id="jquery" class="pgrbar center-block"></div>
                 <p>JQuery</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
                 <div id="sql" class="pgrbar center-block"></div>
                 <p>SQL</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-sm-2 col-md-2">
                 <div id="php" class="pgrbar center-block"></div>
                 <p>PHP</p>
             </div>
         </div>
+        <hr>
         <div class="col-md-12">
             <h3 class="text-center">Programmation</h3> </div>
         <div class="row text-center">
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
                 <div id="bash" class="pgrbar center-block"></div>
                 <p>Bash</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-sm-2 col-md-2">
                 <div id="c" class="pgrbar center-block"></div>
                 <p>C</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
                 <div id="cpp" class="pgrbar center-block"></div>
                 <p>C++</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-sm-2 col-md-2">
                 <div id="java" class="pgrbar center-block"></div>
                 <p>Java</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
                 <div id="python" class="pgrbar center-block"></div>
                 <p>Python</p>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-4 col-sm-2 col-md-2">
                 <div id="git" class="pgrbar center-block"></div>
                 <p>Git</p>
+            </div>
+        </div>
+        <hr>
+        <div class="col-md-12">
+            <h3 class="text-center">Logiciels</h3> </div>
+        <div class="row text-center">
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
+                <div id="acrodc" class="pgrbar center-block"></div>
+                <p>Acrobat</p>
+            </div>
+            <div class="col-xs-4 col-sm-2 col-md-2">
+                <div id="photoshop" class="pgrbar center-block"></div>
+                <p>Photoshop</p>
+            </div>
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
+                <div id="illustrator" class="pgrbar center-block"></div>
+                <p>Illustrator</p>
+            </div>
+            <div class="col-xs-4 col-sm-2 col-md-2">
+                <div id="premiere" class="pgrbar center-block"></div>
+                <p>Premiere</p>
+            </div>
+            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-0 col-md-2">
+                <div id="ae" class="pgrbar center-block"></div>
+                <p>AfterEffects</p>
+            </div>
+            <div class="col-xs-4 col-sm-2 col-md-2">
+                <div id="studiomax" class="pgrbar center-block"></div>
+                <p>3ds Max</p>
             </div>
         </div>
     </div>
@@ -201,9 +246,7 @@
                 <p>© Copyright 2016 Axel Floquet-Trillot</p>
             </div>
             <div class="navbar-right flex flex-row">
-                <script type="text/javascript">
-                    genererIconeMail();
-                </script>
+                <a href="contact.html"><img alt="Contact" src="img/close-envelope.svg" class="img-responsive" width="32"></a>
                 <a href="https://www.facebook.com/axelft" target="_blank"><img src="img/facebook.svg" alt="Facebook" class="img-responsive img-circle" width="32"></a>
                 <a href="https://www.linkedin.com/in/axel-floquet-trillot-79b605108" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn" class="img-responsive" width="32"></a>
                 <a href="https://www.3dhubs.com/paris/hubs/axel-0" target="_blank"><img src="img/3D-Hubs-logo.png" class="img-responsive img-circle" width="32" alt="3DHubs"></a>
