--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
         <div class="row flex flex-row flex-row-reverse">
             <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/photo_gala_aps.jpg" alt="" class="img-responsive"></div>
             <div class="col-sm-8 col-md-9 col-lg-7 flex">
-                <p> Pendant ces deux années de licence, j'ai pris le temps de construire un nouveau projet professionnel, que j'avais d'abord axé sur la neurologie. L'élément qui a déclenché ma réorientation en informatique est mon entrée dans l'Amicale Paris Sciences (l'APS, le BDE de la licence), dans lequel j'ai passé un mandat en tant que Vice-Président chargé de la Communication.</p>
+                <p> Pendant ces deux années de licence, j'ai pris le temps de construire un nouveau projet professionnel, que j'avais d'abord axé sur la neurologie. L'élément qui a déclenché ma réorientation en informatique est mon entrée dans l'Amicale Paris Sciences (l'APS, le BDE de la licence), dans lequel j'ai exercé un mandat en tant que Vice-Président chargé de la Communication.</p>
             </div>
         </div>
         <div class="row flex flex-row">
             <div class="col-sm-8 col-md-9 col-lg-7 flex">
                 <p>Pendant ce mandat, j'ai du reconcevoir le site de l'APS, qui n'avait pas été mis à jour depuis plusieurs années. C'est en démarrant ce projet que j'ai appris le PHP, SQL, HTML et CSS. Le site est dynamique et basé sur Joomla!. Il est accessible via <a href="http://aps-paris5.fr" target="_blank" title="Mon premier site créé">ce lien</a> ou directement par le menu, dans la catégorie Fichiers / Liens.</p>
             </div>
-            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/site_aps.jpeg" alt="" class="img-responsive"> </div>
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/site_aps.png" alt="" class="img-responsive"> </div>
         </div>
         <div class="row flex flex-row flex-row-reverse">
             <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img class="img-responsive" alt="" src="img/presentation/OpenClassrooms_Homepage.png"> </div>
@@ -258,6 +258,7 @@
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/hovermenu.js"></script>
     <script type="text/javascript" src="https://rawgit.com/kimmobrunfeldt/progressbar.js/1.0.0/dist/progressbar.js"></script>
     <script src="js/competences.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
