--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     <div class="container wrapper">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <p class="text-justify">Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
+                <p class="text-justify">Vous pouvez me contacter pour toute question via le formulaire ci-dessous ou directement à mon adresse mail :
                     <script>
                         genererAdresse();
                     </script>
@@ -125,9 +125,7 @@
                 <p>© Copyright 2016 Axel Floquet-Trillot</p>
             </div>
             <div class="navbar-right flex flex-row">
-                <script type="text/javascript">
-                    genererIconeMail();
-                </script>
+                <a href="contact.html"><img alt="Contact" src="img/close-envelope.svg" class="img-responsive" width="32"></a>
                 <a href="https://www.facebook.com/axelft" target="_blank"><img src="img/facebook.svg" alt="Facebook" class="img-responsive img-circle" width="32"></a>
                 <a href="https://www.linkedin.com/in/axel-floquet-trillot-79b605108" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn" class="img-responsive" width="32"></a>
                 <a href="https://www.3dhubs.com/paris/hubs/axel-0" target="_blank"><img src="img/3D-Hubs-logo.png" class="img-responsive img-circle" width="32" alt="3DHubs"></a>
@@ -139,6 +137,7 @@
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/hovermenu.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- FIN JS -->
 </body>
