--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -168,8 +168,10 @@
                                 <div class="col-xs-9 col-sm-7 flex">
                                     <p><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong></p>
                                     <ul>
-                                        <li>Obtention de la 2ème année de licence (L2) en 1ère session</li>
-                                        <li>Obtention de la 3ème année de licence (L3) en 1ère session</li>
+                                        <li>Obtention de la 2ème année de licence (L2) en 1ère session
+                                            <br>Parcours Biologie, Physiologie, Biochimie</li>
+                                        <li>Obtention de la 3ème année de licence (L3) en 1ère session
+                                            <br>Parcours Neurologie, Biochimie, Signalisation Cellulaire</li>
                                     </ul>
                                 </div>
                             </div>
@@ -225,6 +227,7 @@
                                         <li>Montage des verres</li>
                                         <li>Accueil des clients</li>
                                         <li>Gestion de commandes</li>
+                                        <li>Facturation et encaissement</li>
                                     </ul>
                                 </div>
                             </div>
@@ -248,19 +251,19 @@
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex">
                                     <p><strong>Membre Actif de l'Amicale Paris Sciences</strong></p>
+                                    <p>Réalisation de projets tout au long de l'année :</p>
                                     <ul>
-                                        <li>Réalisation de projets tout au long de l'année :
-                                            <ul>
-                                                <li>De nombreux petits projets</li>
-                                                <li>Quelques projets de plus grande importance</li>
-                                            </ul>
-                                        </li>
-                                        <li>Organisation d'événements :
-                                            <ul>
-                                                <li>Des petits déjeuners ou des afterworks</li>
-                                                <li>Des soirées ou des voyages</li>
-                                            </ul>
-                                        </li>
+                                        <li>Demandes de devis pour du matériel, ou pour des lieux</li>
+                                        <li>Réalisation de montages vidéos, affiches</li>
+                                        <li>Entretien d'un local, point de rencontre entre les membre de l'association et les adhérents</li>
+                                        <li>Des formations suivies sur la gestion de projets et sur le fonctionnement de l'association</li>
+                                    </ul>
+                                    <p>Organisation d'événements :</p>
+                                    <ul>
+                                        <li>Des petits déjeuners</li>
+                                        <li>Des afterworks</li>
+                                        <li>Des soirées</li>
+                                        <li>Des voyages</li>
                                     </ul>
                                 </div>
                             </div>
@@ -276,6 +279,8 @@
                                         <li>Création d'un site basé sur Joomla</li>
                                         <li>Création du template du site</li>
                                         <li>Gestion de comptes Facebook, Twitter, et YouTube</li>
+                                        <li>Organisation d'un cours sur Photoshop</li>
+                                        <li>Création des supports de communication (affiches, pin's, etc)</li>
                                     </ul>
                                 </div>
                             </div>
@@ -309,9 +314,7 @@
                 <p>© Copyright 2016 Axel Floquet-Trillot</p>
             </div>
             <div class="navbar-right flex flex-row">
-                <script type="text/javascript">
-                    genererIconeMail();
-                </script>
+                <a href="contact.html"><img alt="Contact" src="img/close-envelope.svg" class="img-responsive" width="32"></a>
                 <a href="https://www.facebook.com/axelft" target="_blank"><img src="img/facebook.svg" alt="Facebook" class="img-responsive img-circle" width="32"></a>
                 <a href="https://www.linkedin.com/in/axel-floquet-trillot-79b605108" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn" class="img-responsive" width="32"></a>
                 <a href="https://www.3dhubs.com/paris/hubs/axel-0" target="_blank"><img src="img/3D-Hubs-logo.png" class="img-responsive img-circle" width="32" alt="3DHubs"></a>
@@ -323,6 +326,7 @@
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/hovermenu.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- FIN JS -->
 </body>
