--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -168,9 +168,9 @@
                                 <div class="col-xs-9 col-sm-7 flex">
                                     <p><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong></p>
                                     <ul>
-                                        <li>Obtention de la 2ème année de licence (L2) en 1ère session
+                                        <li>Obtention de la 2<sup>ème</sup> année de licence (L2) en <sup>1ère</sup> session
                                             <br>Parcours Biologie, Physiologie, Biochimie</li>
-                                        <li>Obtention de la 3ème année de licence (L3) en 1ère session
+                                        <li>Obtention de la <sup>3ème</sup> année de licence (L3) en <sup>1ère</sup> session
                                             <br>Parcours Neurologie, Biochimie, Signalisation Cellulaire</li>
                                     </ul>
                                 </div>
@@ -276,7 +276,7 @@
                                     <p><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></p>
                                     <ul>
                                         <li>Gestion d'un serveur linux hébergé par 1&amp;1</li>
-                                        <li>Création d'un site basé sur Joomla</li>
+                                        <li>Création d'un site basé sur Joomla!</li>
                                         <li>Création du template du site</li>
                                         <li>Gestion de comptes Facebook, Twitter, et YouTube</li>
                                         <li>Organisation d'un cours sur Photoshop</li>
