--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="row flex flex-row">
             <div class="col-sm-8 col-md-9 col-lg-7 flex">
-                <p> J'ai obtenu une équivalence pour entrer en L2 Sciences pour la Santé. J'ai donc poursuivi mes études pendant 2 ans jusqu'à obtention du diplôme de la Licence Sciences et Technologies - Mention Sciences pour la Santé en 2015. Pendant ces deux ans, j'ai surtout étudié la biologie (bactériologie, immunologie, hématologie, virologie, neurologie, etc), la biochimie (métabolisme, etc), et la physiologie (fonctionnement du corps humain sans pathologie). </p>
+                <p> J'ai obtenu une équivalence pour entrer en L2 Sciences pour la Santé. J'ai donc poursuivi mes études pendant 2 ans jusqu'à obtention du diplôme de la Licence Sciences et Technologies - Mention Sciences pour la Santé en 2016. Pendant ces deux ans, j'ai surtout étudié la biologie (bactériologie, immunologie, hématologie, virologie, neurologie, etc), la biochimie (métabolisme, etc), et la physiologie (fonctionnement du corps humain sans pathologie). </p>
             </div>
             <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/science-eprouvette.jpg" alt="" class="img-responsive"> </div>
         </div>
@@ -142,7 +142,11 @@
             <hr>
             <h3 class="text-center">Langues</h3> </div>
         <div class="row text-center">
-            <div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-4">
+            <div class="col-xs-4 col-sm-2 col-sm-offset-3">
+                <div id="fr" class="pgrbar center-block"></div>
+                <p>Français</p>
+            </div>
+            <div class="col-xs-4 col-sm-2">
                 <div id="esp" class="pgrbar center-block"></div>
                 <p>Espagnol</p>
             </div>
