--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -167,7 +167,7 @@
                                     <p>On me prête régulièrement des ordinateurs afin de :</p>
                                     <ul>
                                         <li>Les réparer au niveau matériel ou logiciel</li>
-                                        <li>Récupération de données</li>
+                                        <li>Récupérer des données</li>
                                         <li>Réinstaller le système d'exploitation</li>
                                         <li>Procéder à une désinfection (virus, adware...)</li>
                                     </ul>
