--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -188,7 +188,7 @@
                                         <h4>Autres</h4></div>
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex">
-                                    <p><strong>Une liste rapide concernnt mes autres activités : </strong></p>
+                                    <p><strong>Une liste rapide concernant mes autres activités : </strong></p>
                                     <ul>
                                         <li>Ecouter de la musique (beaucoup...)</li>
                                         <li>Regarder des films ou des séries</li>
