--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -379,6 +379,7 @@
                                         <li>Patinage</li>
                                         <li>V.T.T. en forêt</li>
                                         <li>Kite-Mountainboard</li>
+                                        <li>Ski</li>
                                     </ul>
                                 </div>
                             </div>
