--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                     <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">E-mail</label>
                         <div class="col-sm-4">
-                            <input type="email" name="email" id="email" class="form-control" required title="Entrez votre adresse mail" placeholder="adresse@example.com"> </div>
+                            <input type="email" name="email" id="email" class="form-control" required title="Entrez votre adresse mail" placeholder="adresse@exemple.com"> </div>
                         <label for="tel" class="col-sm-2 control-label">Téléphone</label>
                         <div class="col-sm-4">
                             <input type="tel" name="tel" id="tel" class="form-control" required title="Entrez votre numéro de téléphone" placeholder="0XXXXXXXXX" pattern="[0][12345679][0-9]{8}" maxlength="10"> </div>
